--- a/5.webpack-fx-all/src/assets/sass/index.scss
+++ b/5.webpack-fx-all/src/assets/sass/index.scss
@@ -1,3 +1,8 @@
+.className{
+   display: flex;
+   transform: rotate(45deg);
+   color: pink;
+}
 @import './_variables';
 @import './_function';
 @import './_mixins';
